# LinkHop

./: .dockerignore  .env.example  .envrc  .gitignore  Caddyfile  Dockerfile  IMPLEMENTATION.md  Justfile  PLAN.md  PROGRESS.md  README.md  SPEC.md  docker-compose.override.yml  docker-compose.override.yml.example  docker-compose.yml  flake.nix  manage.py  nix-Dockerfile  pyproject.toml
.github/workflows/: deploy-pages.yml  test.yml
core/: account_auth.py  account_site.py  admin.py  admin_navigation.py  device_auth.py  forms.py  models.py  selectors.py  sse.py  ua.py  views.py
core/api/: __init__.py  auth.py  router.py  schemas.py  urls.py
core/migrations/: 0001_initial.py  0002_add_allow_self_send.py  0003_require_sender_device.py  0004_add_pairing_confirmation_setting.py  0005_pairingpin.py  0006_remove_pairing_confirmation_setting.py  0007_pushsubscription.py  0008_remove_globalsettings_enrollment_token_ttl_hours_and_more.py  0009_remove_device_app_version_and_more.py  0010_remove_pairingpin_is_active.py  0011_device_owner_pairingpin_owner_alter_device_name_and_more.py  0012_device_type_browser_os.py  0013_remove_message_model_and_dead_settings.py  0014_delete_pairingpin.py  0015_add_message_log.py  0016_remove_message_log.py  (+1 more)
docs/: API.md  ARCHITECTURE_NOTES.md  BACKUP.md  BOOKMARKLET_SPEC.md  CLI_SPEC.md  DEPLOYMENT.md  DEVICE_MANAGEMENT.md  ENVIRONMENT.md  EXTENSION_SPEC.md  HTTP_SHORTCUTS.md  LINKHOP_LITE.md  LINKHOP_TS.md  LITE_PROTOCOL.md  MULTIUSER_SPEC.md  PLAN.md  PROGRESS.md  PWA_SPEC.md  TESTS.md
e2e/: README.md  conftest.py  test_extension.py  test_extension_mv3.py  test_pwa_push.py  test_sse_realtime.py
extension/: README.md  background.js  content_script.js  manifest.json  popup.html  popup.js
extension-mv3/: README.md  content_script.js  grant-permission.html  grant-permission.js  manifest.json  popup.css  popup.html  popup.js  service_worker.js
linkhop/: asgi.py  urls.py  wsgi.py
linkhop-lite/: .gitignore  README.md  linkhop-lite-implementation-spec-v0.md  linkhop-lite-protocol-draft.md  package-lock.json  package.json  playwright-extension.config.ts  playwright.config.ts  tsconfig.json  vite.config.ts
linkhop-ts/: .dockerignore  .env.example  .gitignore  CHECKLIST.md  Dockerfile  LINKHOP_TS.md  README.md  deno.json  docker-compose.yml
scripts/: run-e2e.sh
templates/: base.html  connect.html  debug.html  first_run_setup.html  home.html  hop.html  inbox.html  message_detail.html  pair.html  push_debug.html  send.html  sent.html  service-worker.js
(+156 files in other folders)
