[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "linkhop"
version = "0.1.0"
dependencies = [
    "Django>=5.1,<5.3",
    "django-ninja>=1.3,<1.4",
    "django-axes>=7,<8",
    "django-unfold>=0,<1",
    "uvicorn>=0.34,<0.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-django>=4.9,<5",
    "pytest-playwright>=0.7,<0.8",
    "playwright>=1.51,<1.52",
    "ruff>=0.11,<0.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "linkhop*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "linkhop.settings.test"
pythonpath = ["."]
testpaths = ["core/tests", "e2e"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["core/migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]

[tool.ruff.lint.per-file-ignores]
"core/api/__init__.py" = ["F401"]
"core/services/__init__.py" = ["F401"]
"linkhop/settings/__init__.py" = ["F403"]
"linkhop/settings/dev.py" = ["F403"]
"linkhop/settings/test.py" = ["F403"]

[tool.ruff.format]
quote-style = "double"
