[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dependencies = [
  "Django>=5.1,<5.3",
  "django-axes>=7,<8",
  "django-unfold>=0,<1",
  "pywebpush>=2,<3",
  "uvicorn>=0.34,<0.35",
]
name = "linkhop"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-django>=4.9,<5",
  "pytest-playwright>=0.7,<0.8",
  "playwright>=1.51,<1.52",
  "ruff>=0.11,<0.12",
]

[tool.setuptools.packages.find]
include = ["core*", "linkhop*"]
where = ["."]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "linkhop.settings.test"
pythonpath = ["."]
testpaths = ["core/tests", "e2e"]
# filterwarnings = [
#     "ignore:Converter 'uuid' is already registered.*",
#     "ignore:Support for class-based `config` is deprecated, use ConfigDict instead\\..*",
# ]

[tool.ruff]
extend-exclude = ["core/migrations"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]

[tool.ruff.lint.per-file-ignores]
"core/api/__init__.py" = ["F401"]
"core/services/__init__.py" = ["F401"]
"linkhop/settings/__init__.py" = ["F403"]
"linkhop/settings/dev.py" = ["F403"]
"linkhop/settings/test.py" = ["F403"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-django>=4.12.0",
]
